[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://EndGame.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="EndGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.82843
margin_bottom = 2.82843
color = Color( 0.133333, 0.239216, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalScore" type="Label" parent="ColorRect"]
margin_left = 112.733
margin_top = 54.1827
margin_right = 693.733
margin_bottom = 138.183
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountCorrect" type="Label" parent="ColorRect"]
margin_left = 351.0
margin_top = 216.0
margin_right = 932.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 1 )

[node name="ButtonDoOver" type="Button" parent="ColorRect"]
margin_left = 9.01892
margin_top = 509.819
margin_right = 216.019
margin_bottom = 596.819
custom_fonts/font = SubResource( 2 )
text = "Play Again"

[node name="ButtonEnd" type="Button" parent="ColorRect"]
margin_left = 817.192
margin_top = 509.819
margin_right = 1024.19
margin_bottom = 596.819
custom_fonts/font = SubResource( 3 )
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="ColorRect"]
margin_left = 408.616
margin_top = 512.064
margin_right = 615.616
margin_bottom = 599.064
custom_fonts/font = SubResource( 3 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="ColorRect"]
margin_left = 828.0
margin_top = 41.0
margin_right = 976.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/ButtonDoOver" to="." method="_on_ButtonDoOver_pressed"]
[connection signal="pressed" from="ColorRect/ButtonEnd" to="." method="_on_ButtonEnd_pressed"]
[connection signal="pressed" from="ColorRect/NextLevel" to="." method="_on_ButtonEnd_pressed"]
